👾⏱ Checkpoint ./public/styles/main.css:13079275/64 ./views/index.html:13079275/96 ./public/js/sketch.js:13079275/4878

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
   </head>
   <body>
     <div id="app">
