⏰👗 Checkpoint ./public/js/sketch.js:13079275/1028 ./public/js/closet.js:13079275/1291 ./views/index.html:13079275/472

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-  </head>
+    <script src="../js/closet.js"></script>
+    <script src="../js/sketch.js"></script>
+</head>
   <body>
     <div id="app">
       <header class="header">
