--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-    <script src="../js/closet.js"></script>
-    <script src="../js/sketch.js"></script>
+    <script src="./js/closet.js"></script>
+    <script src="./js/sketch.js"></script>
 </head>
   <body>
     <div id="app">
