🍣🚎 Checkpoint ./public/styles/main.css:13079275/127 ./views/index.html:13079275/591 ./public/js/sketch.js:13079275/234

--- a/views/index.html
+++ b/views/index.html
@@ -12,9 +12,12 @@
     <script src="./js/sketch.js"></script>
 </head>
   <body>
-    <div class="slidecontainer">
-			<input oninput="newTempInput(this);" type="range" min="1" max="100" value="50" class="slider" id="tempSlider">
-		</div>
+<!--     <div class="slidecontainer" style="padding: 10px;">
+      <label>Simulate Temperaure Changes</label>
+			<input type="range" min="1" max="100" value="50" 
+             class="slider" id="tempSlider"
+             oninput="newTempInput(this);" >
+		</div> -->
 <!--     <div id="app">
       <header class="header">
         <h1 class="header__title">Todo app</h1>
