--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+canvas {
+  display: block;
+}
 .todo-item{
   border: 2px solid black;
   padding: 6px;
