--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,9 +1,11 @@
 html, body {
   margin: 0;
   padding: 0;
+/*   overflow: hidden; */
 }
 canvas {
   display: block;
+/*   overflow: hidden; */
 }
 .todo-item{
   border: 2px solid black;
