📖🌹 Checkpoint ./public/styles/main.css:13079275/42 ./public/js/sketch.js:13079275/20

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,11 +1,13 @@
 html, body {
   margin: 0;
   padding: 0;
-/*   overflow: hidden; */
+  height: 100%
+  overflow: hidden;
 }
 canvas {
   display: block;
-/*   overflow: hidden; */
+  overflow: hidden;
+  height: 100%
 }
 .todo-item{
   border: 2px solid black;
