--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,6 +9,9 @@ canvas {
   overflow: hidden;
   height: 100%
 }
+.slider {
+  z-index: 1;
+}
 .todo-item{
   border: 2px solid black;
   padding: 6px;
