--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -4,14 +4,18 @@ html, body {
   height: 100%
   overflow: hidden;
 }
+
 canvas {
   display: block;
   overflow: hidden;
   height: 100%
 }
-.slider {
-  z-index: 1;
+
+textarea, 
+input[type="slider"] {
+  z-index: -1;
 }
+
 .todo-item{
   border: 2px solid black;
   padding: 6px;
