🍚🐙 Checkpoint ./index.js:13079275/300 ./views/index.html:13079275/45

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
     <script src="./js/sketch.js"></script>
 </head>
   <body>
+    <img src="../images/beanie.png" />
 <!--     <div class="slidecontainer" style="padding: 10px;">
       <label>Simulate Temperaure Changes</label>
 			<input type="range" min="1" max="100" value="50" 
