--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -20,3 +20,9 @@ input[type="slider"] {
   border: 2px solid black;
   padding: 6px;
 }
+
+.add-button {
+  position: absolute;
+  bottom: 1px;
+  left: 1px;
+}
