--- a/views/index.html
+++ b/views/index.html
@@ -9,30 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <script src="./js/installer.js"></script>
     <script src="./js/closet.js"></script>
     <script src="./js/sketch.js"></script>
 </head>
   <body>
-<!--     <div class="slidecontainer" style="padding: 10px;">
-      <label>Simulate Temperaure Changes</label>
-			<input type="range" min="1" max="100" value="50" 
-             class="slider" id="tempSlider"
-             oninput="newTempInput(this);" >
-		</div> -->
-<!--     <div id="app">
-      <header class="header">
-        <h1 class="header__title">Todo app</h1>
-      </header>
-      <main class="main">
-        <h2>Add todos</h2>
-        <form class="todo-form">
-          <input type="text" name="todo" placeholder="todo"/>
-          <input type="submit" value="add todo"/>
-        </form>
-        <h2>Todo list</h2>
-        <section class="todo-list"></section>
-      </main>
-    </div>
-    <script src="./js/main.js"></script> -->
+    <img src="images/maskable-icon.jpg" alt="the app icon, bits of formatted text in a code editor">
+    <button class="add-button">Add to home screen</button>
   </body>
 </html>
