👕🐡 Checkpoint ./views/index.html:13079275/125 ./public/styles/main.css:13079275/109 ./public/js/sw.js:13079275/6

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,10 @@
     <script src="./js/sketch.js"></script>
 </head>
   <body>
-    <img src="images/maskable-icon.jpg" alt="the app icon, bits of formatted text in a code editor">
+    <img class="app-icon" 
+         width="90px" height="90px" 
+         src="/images/maskable-icon.png" 
+         alt="the app icon, bits of formatted text in a code editor">
     <button class="add-button">Add to home screen</button>
   </body>
 </html>
