--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="manifest" href="manifest.webmanifest">
+<!--     <link rel="manifest" href="manifest.webmanifest"> -->
+    <link rel="manifest" href="manifest.json">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
