--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-    <script src="./js/installer.js"></script>
     <script src="./js/closet.js"></script>
     <script src="./js/sketch.js"></script>
 </head>
@@ -19,6 +18,7 @@
          width="90px" height="90px" 
          src="/images/maskable-icon.png" 
          alt="the app icon, bits of formatted text in a code editor">
-    <button class="add-button">Add to home screen</button>
+    <button id="add-button">Add to home screen</button>
+    <script src="./js/installer.js"></script>
   </body>
 </html>
