--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,12 @@
     <link rel="manifest" href="manifest.json">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <meta name="description" content="d4w means d"/>
+    <title>d4w, An app to help you dress for the weather!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script src="./js/closet.js"></script>
     <script src="./js/sketch.js"></script>
 </head>
