🌅🛥 Checkpoint ./views/index.html:13079275/5961 ./public/js/installer.js:13079275/174 ./public/js/sketch.js:13079275/220

--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,13 @@
     <link rel="manifest" href="manifest.json">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="d4w means d"/>
+    <meta name="description" content="d4w is an app designed to help you dress for the weather. It is set up to be used as an icon from your mobile device's home screen."/>
     <title>d4w, An app to help you dress for the weather!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
+    <button id="add-button">Add to home screen</button>
+    <script src="./js/installer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script src="./js/closet.js"></script>
     <script src="./js/sketch.js"></script>
@@ -19,7 +21,5 @@
          width="90px" height="90px" 
          src="/images/maskable-icon.png" 
          alt="the app icon, bits of formatted text in a code editor">
-    <button id="add-button">Add to home screen</button>
-    <script src="./js/installer.js"></script>
   </body>
 </html>
