--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
-    <script src="./js/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script src="./js/closet.js"></script>
     <script src="./js/sketch.js"></script>
     <button id="add-button">Add to home screen</button>
