⭐️🙇 Checkpoint ./public/manifest.webmanifest:13079275/1730 ./views/index.html:13079275/449 ./public/js/installer.js:13079275/15 ./public/styles/main.css:13079275/119 ./.glitch-assets:13079275/756

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -23,7 +23,7 @@ input[type="slider"] {
 
 #add-button {
   position: absolute;
-  bottom: 2px;
+  bottom: 1px;
   left: 1px;
 }
 
@@ -31,4 +31,10 @@ input[type="slider"] {
   position: absolute;
   bottom: 20px;
   left: 1px
+}
+
+.refresh-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
