--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,7 @@
   <head>
 <!--     <link rel="manifest" href="manifest.webmanifest"> -->
     <link rel="manifest" href="manifest.json">
+    <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="d4w is an app designed to help you dress for the weather. It is set up to be used as an icon from your mobile device's home screen."/>
