👦🐫 Checkpoint ./views/index.html:13079275/213 ./public/js/sketch.js:13079275/7351 ./public/js/helpers.js:13079275/7478 ./public/styles/main.css:13079275/239

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -37,4 +37,9 @@ input[type="slider"] {
   position: absolute;
   top: 20px;
   right: 20px;
+  padding: 5px;
+}
+
+.refresh-button:active {
+  background-color: rgba(0,0,0,0.2); /* Black background with opacity */
 }
