--- a/views/index.html
+++ b/views/index.html
@@ -14,10 +14,11 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script src="./js/closet.js"></script>
     <script src="./js/sketch.js"></script>
+    <script src="./js/helpers.js"></script>    
     <script src="./js/installer.js"></script>
 </head>
   <body>
-    <img class="refresh-button" 
+    <img class="refresh-button" onclick="checkWeather();"
          src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976" 
          width="20px" height="20px" />
     <img class="app-icon" 
