📚😀 Checkpoint ./views/index.html:13079275/43 ./public/js/sketch.js:13079275/1126

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     <script src="./js/installer.js"></script>
 </head>
   <body>
-    <input type="img" class="refresh-button" onclick="checkWeather()"
+    <input type="img" class="refresh-button" z-index="1"
          src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976" 
          width="20px" height="20px">
     <img class="app-icon" 
