--- a/views/index.html
+++ b/views/index.html
@@ -17,9 +17,9 @@
     <script src="./js/installer.js"></script>
 </head>
   <body>
-    <img src="images/beanie.png" width="20px" />
+<!--     <img src="images/beanie.png" width="20px" /> -->
     <input type="img" class="refresh-button"
-         src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976" 
+         src="/public/images/refresh-50x50.png" 
          width="20px" height="20px">
     <img class="app-icon" 
          width="90px" height="90px" 
