👽🐧 Checkpoint ./views/index.html:13079275/1371

--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-<!--     <link rel="manifest" href="manifest.webmanifest"> -->
-    <link rel="manifest" href="manifest.json">
-    <base href="./">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="d4w is an app designed to help you dress for the weather. It is set up to be used as an icon from your mobile device's home screen."/>
+    <link rel="manifest" href="/js/manifest.json">
+    <link rel="apple-touch-icon" href="/images/maskable-icon-512.png" />
+    <base href="./">
     <title>d4w, An app to help you dress for the weather!</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script src="./js/closet.js"></script>
@@ -17,9 +16,8 @@
     <script src="./js/installer.js"></script>
 </head>
   <body>
-<!--     <img src="images/beanie.png" width="20px" /> -->
-    <input type="img" class="refresh-button"
-         src="/public/images/refresh-50x50.png" 
+    <input type="image" class="refresh-button"
+          src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
          width="20px" height="20px">
     <img class="app-icon" 
          width="90px" height="90px" 
