--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <title>d4w, An app to help you dress for the weather!</title>
 <!--     <script src="./js/installer.js"></script> -->
 </head>
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="styles/main.css">
   <script>
         // register service worker
 
