--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,36 @@
         }
     </script>
   <body>
+    <div id="drop-zone">
+       <svg
+            class="icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 10 10"
+        >
+            <path
+                d="M5,3 l0,4 M3,5 l4,0"
+                fill="none"
+                stroke="#fff"
+                stroke-width="0.5"
+            />
+        </svg>
+    </div>
+    <div id="topBar">
+      <div class="topBarDiv">
+        <label for="file-input" class="customFileOpen controlButton"
+               >Upload&nbsp;Image&nbsp;📂</label
+        >
+        <input id="file-input" type="file" />
+      </div>
+      
+      
+      <a
+         id="weatherInfo"
+         onclick="refreshWeather(this)"
+         class="topBarDiv controlButton"
+         >Getting the weather...</a>
+    </div>
+    </div>
     <input type="image" class="refresh-button"
           src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
          width="20px" height="20px">
