💆🛰 Checkpoint ./views/index.html:13079275/702 ./public/styles/main.css:13079275/394

--- a/views/index.html
+++ b/views/index.html
@@ -61,12 +61,22 @@
          id="weatherInfo"
          onclick="refreshWeather(this)"
          class="topBarDiv controlButton"
-         >Getting the weather...</a>
-    </div>
-    </div>
-    <input type="image" class="refresh-button"
+         >Weather&nbsp;Info&nbsp;Here&nbsp;💻</a
+      
+      >
+      
+      <div id="bigTemp" class="topBarDiv controlButton">
+        Big&nbsp;Temp&nbsp;Here&nbsp;‼️
+      </div>
+      
+      <input type="image" class="refresh-button"
           src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
          width="20px" height="20px">
+      
+    </div>
+    </div>
+  
+    
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script type="text/javascript" src="./js/closet.js"></script>
