--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,7 +14,28 @@ canvas {
   max-height: 100%;
   display: block;
   overflow: hidden;
-  height: 100%
+  height: 100%;
+  cursor: hand;
+}
+
+#topBar {
+    width: 100%;
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.topBarDiv {
+    width: 100%;
+    height: 100%;
+    padding: 5px 0;
+    border-left: 2px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    min-height: 8vh;
+    padding: 0;
 }
 
 textarea, 
