--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   height: 100%
   overflow: hidden;
+  cursor: pointer;
 }
 
 canvas {
@@ -12,10 +13,11 @@ canvas {
   transform: translateX(-50%) translateY(-50%);
   max-width: 100%;
   max-height: 100%;
+  z-index: -1;
   display: block;
   overflow: hidden;
   height: 100%;
-  cursor: hand;
+
 }
 
 #topBar {
