--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,9 +1,9 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%
+  height: 100%;
   overflow: hidden;
-  cursor: pointer;
+/*   cursor: pointer; */
 }
 
 canvas {
