--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     </script>
   <body>
     <div id="drop-zone">
-       <svg
+<!--        <svg
             class="icon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 10 10"
@@ -46,7 +46,7 @@
                 stroke="#fff"
                 stroke-width="0.5"
             />
-        </svg>
+        </svg> -->
     </div>
     <div id="topBar">
       <div class="topBarDiv">
