🐞🦂 Checkpoint ./views/index.html:13079275/20

--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
     <div id="topBar">
       <div class="topBarDiv">
         <label for="file-input" class="customFileOpen controlButton"
-               >Upload&nbsp;Image&nbsp;📂</label
+               >Add&nbsp;Image&nbsp;📂</label
         >
         <input id="file-input" type="file" />
       </div>
@@ -73,7 +73,6 @@
           src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
          width="20px" height="20px">
       
-    </div>
     </div>
   
     
