🎒💓 Checkpoint ./views/index.html:13079275/34 ./public/js/sketch.js:13079275/284

--- a/views/index.html
+++ b/views/index.html
@@ -51,14 +51,14 @@
     <div id="topBar">
       <div class="topBarDiv">
         <label for="file-input" class="customFileOpen controlButton"
-               >Add&nbsp;Image&nbsp;📂</label
+               >Add&nbsp;New&nbsp;Clothes&nbsp;📂</label
         >
         <input id="file-input" type="file" />
       </div>
       
       
       <a
-         id="weatherInfo"
+         id="weather-info"
          onclick="refreshWeather(this)"
          class="topBarDiv controlButton"
          >Weather&nbsp;Info&nbsp;Here&nbsp;💻</a
