🛫🏡 Checkpoint ./public/js/sketch.js:13079275/924 ./views/index.html:13079275/438 ./public/styles/main.css:13079275/54

--- a/views/index.html
+++ b/views/index.html
@@ -56,22 +56,25 @@
         <input id="file-input" type="file" />
       </div>
       
+      <div>
+        <a
+           id="weather-info"
+           onclick="refreshWeather(this)"
+           class="topBarDiv controlButton"
+           >Weather&nbsp;Info&nbsp;Here&nbsp;💻</a
+        >
+        <input type="image" class="refresh-button"
+          src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
+         width="20px" height="20px">
+      </div>
       
-      <a
-         id="weather-info"
-         onclick="refreshWeather(this)"
-         class="topBarDiv controlButton"
-         >Weather&nbsp;Info&nbsp;Here&nbsp;💻</a
-      
-      >
-      
-      <div id="bigTemp" class="topBarDiv controlButton">
+      <div id="big-temp" class="topBarDiv controlButton">
         Big&nbsp;Temp&nbsp;Here&nbsp;‼️
       </div>
       
-      <input type="image" class="refresh-button"
+<!--       <input type="image" class="refresh-button"
           src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
-         width="20px" height="20px">
+         width="20px" height="20px"> -->
       
     </div>
   
