--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   height: 100%;
   overflow: hidden;
+  font-family: courier;
 /*   cursor: pointer; */
 }
 
@@ -99,9 +100,9 @@ input[type="slider"] {
 }
 
 .refresh-button {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+  position: relative;
+  top: 10px;
+  right: 10px;
   padding: 5px;
 }
 
