--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -100,9 +100,9 @@ input[type="slider"] {
 }
 
 .refresh-button {
-  position: relative;
-  top: 10px;
-  right: 10px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
   padding: 5px;
 }
 
