--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     </script>
   <body>
     <div id="drop-zone">
-<!--        <svg
+       <svg
             class="icon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 10 10"
@@ -46,9 +46,13 @@
                 stroke="#fff"
                 stroke-width="0.5"
             />
-        </svg> -->
+        </svg>
     </div>
     <div id="topBar">
+            
+      <div id="big-temp" class="topBarDiv controlButton">
+        Big&nbsp;Temp&nbsp;Here&nbsp;‼️
+      </div>
       
       <div class="topBarDiv controlButton">
         <a
@@ -61,16 +65,13 @@
           src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
          width="20px" height="20px">
       </div>
+
       
       <div class="topBarDiv">
         <label for="file-input" class="customFileOpen controlButton"
                >Add&nbsp;New&nbsp;Clothes&nbsp;📂</label
         >
         <input id="file-input" type="file" />
-      </div>
-      
-      <div id="big-temp" class="topBarDiv controlButton">
-        Big&nbsp;Temp&nbsp;Here&nbsp;‼️
       </div>
       
 <!--       <input type="image" class="refresh-button"
