⚡️🏌 Checkpoint ./public/styles/main.css:13079275/68 ./public/js/sketch.js:13079275/217 ./views/index.html:13079275/63

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -21,9 +21,17 @@ canvas {
 
 }
 
+
 /****************************
 ***** Image Scrubber CSS ****
 ****************************/
+
+@media (max-width: 800px) {
+  
+  
+  
+  
+}
 
 #topBar {
     width: 100%;
