--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,13 +1,13 @@
 html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow: hidden;
+/*   margin: 0; */
+/*   padding: 0; */
+/*   height: 100%; */
+/*   overflow: hidden; */
   font-family: courier;
 /*   cursor: pointer; */
 }
 
-canvas {
+#sketch-holder {
   position: absolute;
   top: 60%;
   left: 50%;
@@ -15,9 +15,9 @@ canvas {
   max-width: 100%;
   max-height: 100%;
   z-index: -1;
-  display: block;
-  overflow: hidden;
-  height: 100%;
+/*   display: block; */
+/*   overflow: hidden; */
+/*   height: 100%; */
 
 }
 
@@ -26,10 +26,37 @@ canvas {
 ***** Image Scrubber CSS ****
 ****************************/
 
-@media (max-width: 800px) {
+#drop-zone {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    bottom: 20px;
+    left: 20px;
+    border-radius: 20px;
+    background: rgba(204, 204, 204, 0.9);
+    z-index: 10;
+    transition: opacity 0.2s;
+}
+body:not(.dragging) #drop-zone {
+    pointer-events: none;
+    opacity: 0;
+}
+#drop-zone .icon {
+    width: 100%;
+    height: 100%;
+}
+
+@media (max-width: 600px) {
   
+  #topBar {
+    grid-template-columns: repeat(1, 1fr);
+  }
   
-  
+  #sketch-holder {
+    position: absolute;
+    top: 60%;
+    max-height: 75%;
+  }
   
 }
 
