--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,10 +14,10 @@ html, body {
   transform: translateX(-50%) translateY(-50%);
   max-width: 100%;
   max-height: 100%;
-  z-index: -1;
-/*   display: block; */
+/*   z-index: 2; */
+  display: block;
 /*   overflow: hidden; */
-/*   height: 100%; */
+  height: 100%;
 
 }
 
