--- a/views/index.html
+++ b/views/index.html
@@ -82,6 +82,7 @@
   
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script type="text/javascript" src="./js/closet.js"></script>
+    <script type="text/javascript" src="./js/addImage.js"></script>
     <script type="text/javascript" src="./js/sketch.js"></script>  
     
     <div id="sketch-holder"></div>
