💋🚉 Checkpoint ./views/index.html:13079275/41 ./public/styles/main.css:13079275/62 ./public/js/sketch.js:13079275/177

--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
         }
     </script>
   <body>
-    <div id="drop-zone">
+    <div id="drop-zone" style="display: none;">
        <svg
             class="icon"
             xmlns="http://www.w3.org/2000/svg"
