😜🍁 Checkpoint ./public/js/sketch.js:13079275/79 ./views/index.html:13079275/62

--- a/views/index.html
+++ b/views/index.html
@@ -53,6 +53,7 @@
       <div id="big-temp" class="topBarDiv controlButton">
         Big&nbsp;Temp&nbsp;Here&nbsp;‼️
       </div>
+      <input type='range' id='slider'/>
       
       <div class="topBarDiv controlButton">
         <a
