🍨💡 Checkpoint ./views/index.html:13079275/1063 ./public/styles/main.css:13079275/29

--- a/views/index.html
+++ b/views/index.html
@@ -50,10 +50,15 @@
     </div>
     <div id="topBar">
             
-      <div id="big-temp" class="topBarDiv controlButton">
-        Big&nbsp;Temp&nbsp;Here&nbsp;‼️
+      <div id='temp' class="topBarDiv controlButton">
+        <div id="big-temp">
+          Big&nbsp;Temp&nbsp;Here&nbsp;‼️
+        </div>
+        <center>
+          Manual&nbsp;Temp&nbsp;Adjust
+            <input type='range' id='slider'/>
+        </center>
       </div>
-      <input type='range' id='slider'/>
       
       <div class="topBarDiv controlButton">
         <a
