🎍👍 Checkpoint ./public/js/sketch.js:13079275/60 ./views/index.html:13079275/1913 ./public/styles/main.css:13079275/41

--- a/views/index.html
+++ b/views/index.html
@@ -48,18 +48,13 @@
             />
         </svg>
     </div>
+    
     <div id="topBar">
-            
-      <div id='temp' class="topBarDiv controlButton">
-        <div id="big-temp">
-          Big&nbsp;Temp&nbsp;Here&nbsp;‼️
-        </div>
-        <center>
-          Manual&nbsp;Temp&nbsp;Adjust
-            <input type='range' id='slider'/>
-        </center>
-      </div>
       
+      <div id="big-temp" class="topBarDiv controlButton">
+        Big&nbsp;Temp&nbsp;Here&nbsp;‼️
+      </div>
+        
       <div class="topBarDiv controlButton">
         <a
            id="weather-info"
@@ -80,10 +75,6 @@
         <input id="file-input" type="file" />
       </div>
       
-<!--       <input type="image" class="refresh-button"
-          src="https://cdn.glitch.global/0c5eca9e-ad7c-470d-9bb2-68c6f6d4f79b/refresh-50x50.png?v=1642998317976"
-         width="20px" height="20px"> -->
-      
     </div>
   
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
@@ -91,7 +82,9 @@
     <script type="text/javascript" src="./js/addImage.js"></script>
     <script type="text/javascript" src="./js/sketch.js"></script>  
     
-    <div id="sketch-holder"></div>
+    <div id="sketch-holder">
+
+    </div>
     
     <img class="app-icon" 
          width="90px" height="90px" 
